--- a/src/webcontent/index.html
+++ b/src/webcontent/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn Git</title>
     <link rel="stylesheet" href="../styles/login.css">
+    <link rel="stylesheet" href="../styles/carosal.css">
 </head>
 <body>
     
