super imprtant task finished for boss not me

--- a/src/webcontent/index.html
+++ b/src/webcontent/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles/carosal.css">
 </head>
 <body>
-    
+    <div>I was writing this just before boss called</div>
+    <div>I moved to other branch and created this stash</div>
 </body>
 </html>
